--- a/18.03/6.查找当前作用域的上一级作用域.html
+++ b/18.03/6.查找当前作用域的上一级作用域.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>6.查找当前作用域的上一级作用域</title>
 </head>
 <body>
 
