--- a/18.04/19.深入扩展-原型链模式(常用的六种继承方式).html
+++ b/18.04/19.深入扩展-原型链模式(常用的六种继承方式).html
@@ -15,28 +15,260 @@
       // var num = 1;
       // var num = new Number(1);  //这里的num是 对象
 
-      Object.prototype.aaa = function () {
-        console.log(aaa);
-      }
-      var obj = {
-        name: "珠峰培训",
-        age: 19
-      }
+      // Object.prototype.aaa = function () {
+      //   console.log(aaa);
+      // }
+      // var obj = {
+      //   name: "珠峰培训",
+      //   age: 19
+      // }
 
-      for(var key in obj) {
+      // for(var key in obj) {
         // console.log(obj[key]);
         // -> for in 循环在遍历的时候，默认的话可以把自己私有的和在它所属类原型上扩展的属性和方法都可以遍历到，但是一般情况下，我们遍历一个对象只需要遍历私有的即可，我们可以使用一下的判断进行处理：
         // if(obj.propertyIsEnumerable(key)){ // 判断是否可枚举
         //   console.log(obj[key]);
         // }
 
-        if(obj.hasOwnProperty(key)){      // 判断是否为私有的
-          console.log(key);
-        }
-      }
+      //   if(obj.hasOwnProperty(key)){      // 判断是否为私有的
+      //     console.log(key);
+      //   }
+      // }
 
   </script>
 
-  <p>视频已看前15分钟</p>
+  <script>
+    /* 2. Object.create */
+    // -> Object.create() 方法创建一个拥有制定原型和若干个指定属性的对象
+    // -> Object.create(proObj) 创建一个新的对象，但是还是要把proObj作为这个对象的原型; 在不兼容(ECMAScript5)
+
+    // var obj = {
+    //   name: "珠峰",
+    //   age: 7,
+    //   constructor: Fn,
+    //   getX: function () {}
+    // } // -> = xxxfff000
+
+    // 通过遍历来克隆对象
+    // var obj2 = {};
+    // for(var key in obj){
+    //   if(obj.hasOwnProperty(key)){
+    //     obj2[key] = obj[key]
+    //   }
+    // }
+
+    // function Fn () {}
+    //
+    // Fn.prototype = obj;    // Fn.prototype = xxxfff000
+    // Fn.prototype.sum = function () {}
+
+    // Object.create()
+    // var f = new Fn;
+
+    // var obj = {
+    //   getX: function () {
+    //     console.log('22');
+    //   }
+    // }
+
+    // var obj2 = Object.create(obj);
+    // -> obj2
+    // __proto__:
+    // getX:function...
+    // __proto__:Object.prototype
+
+    // obj2.getX();
+    //
+    // obj.getY = function (){
+    //   console.log('3333');
+    // }
+    //
+    // obj2.getY();
+
+  </script>
+
+  <script>
+    /* 3. 原型继承 */
+    // #div__proto__ ->  HTMLDivElement.prototype -> HTMLElement.prototype -> Element.prototype -> Node.prototype -> EventTarget.prototype->Object.prototype
+
+
+    // function myObject() {}
+    // myObject.prototype = {
+    //   constructor:Object,
+    //   hasOwnProperty:function(){}
+    // }
+    //
+    // function myEventTarget () {
+    //
+    // }
+    // myEventTarget.prototype = new myObject();
+    // myEventTarget.prototype.addEventLister = function () {};
+    //
+    // function myNode() {
+    //
+    // }
+    // myNode.prototype = new myEventTarget;
+    // myNode.prototype.createElement = function (){};
+    //
+    //
+    // var n  = new myNode;
+
+    // function A() {
+    //   this.x = 100;
+    // }
+    // A.prototype.getX = function () {
+    //   console.log(this.x);
+    // }
+    //
+    // function B() {
+    //   this.x = 2000;
+    //   this.y = 200;
+    // }
+    //
+    // B.prototype = new A;
+    // B.prototype.constructor = B;
+    //
+    // var b = new B;
+    // b.getX();
+
+    // 原型继承是我们js中最常用的一种方式
+    // -> 子类B想要继承父类中A中的所有的属性和方法(私有+公有)，只需要让B.prototype = new A;即可。
+    // ->原型继承特点，把父类中私有的+公有的都继承到了子类的原型上(子类公有的)
+    // ->核心思想
+    // 原型链继承并不是把父类中的属性和方法克隆一份一模一样给B，而是让B和A之间增加了原型链的实例，以后B的实例n想要A中的getX方法，需要一级一级的向上查找来使用
+
+
+  </script>
+
+  <script>
+    /* 4. call 继承 */
+    // call继承：把父类私有的属性和方法克隆一份一模一样的 作为子类私有的属性
+    // function A(){
+    //   this.x = 100;
+    // }
+    //
+    // A.prototype.getX = function () {
+    //   console.log(this.x);
+    // }
+    //
+    // function B(){
+    //   // this -> n
+    //   A.call(this);  //-> A.call(n)  把A执行让A中的this变为了n
+    // }
+    //
+    // var n = new B;
+    // console.log(n.x)
+
+  </script>
+
+  <script>
+    /* 5. 冒充对象继承 */
+    // 冒充对象继承：把父类私有的+公用的克隆一份一模一样的给子类私有的
+    // function A(){
+    //   this.x = 100;
+    // }
+    //
+    // A.prototype.getX = function () {
+    //   console.log(this.x);
+    // }
+    //
+    // function B(){
+    //   var tmp = new A;
+    //   for(var key in tmp) {
+    //     // this -> n
+    //     // if(tmp.propertyIsEnumerable(key)){
+    //     //   console.log(key);
+    //     // }
+    //
+    //     // if(tmp.hasOwnProperty(key)){
+    //     //   console.log(key)
+    //     // }
+    //     this[key] = tmp[key];
+    //   }
+    //   tmp = null;
+    // }
+    //
+    // var n = new B;
+    // n.getX();
+
+  </script>
+
+  <script>
+    /* 6.混合模式继承 */
+    // 原型继承+call继承
+
+    // function A(){
+    //   this.x = 100;
+    // }
+    //
+    // A.prototype.getX = function () {
+    //   console.log(this.x);
+    // }
+    //
+    // function B(){
+    //   A.call(this);        // n.x = 100;
+    // }
+    // B.prototype = new A;    // -> B.prototype: x=100, getX
+    // B.prototype.constructor = B;
+    //
+    // var n = new B;
+  </script>
+
+  <script>
+    /* 寄生组合式继承 */
+
+    // function A(){
+    //   this.x = 100;
+    // }
+    //
+    // A.prototype.getX = function () {
+    //   console.log(this.x);
+    // }
+    //
+    // function B(){
+    //   A.call(this);
+    // }
+    // // B.prototype = Object.create(A.prototype);//  不兼容 IE6~8
+    // B.prototype = createObject(A.prototype);//  不兼容 IE6~8
+    // B.prototype.constructor = B;
+    //
+    // var n = new B;
+    // console.log(n)
+    //
+    // function createObject(o){
+    //   function Fn(){}
+    //   Fn.prototype = o;
+    //   return new Fn;
+    // }
+
+
+  </script>
+
+  <script>
+    /* 8. 中间类继承法  -> 不兼容 */
+    // function avgFn() {
+    //   Array.prototype.sort.call(arguments,function(a,b){
+    //     return a - b;
+    //   });
+    //   Array.prototype.pop.call(arguments);
+    //   Array.prototype.shift.call(arguments);
+    //   return ( eval(Array.prototype.join.call(arguments,"+"))/arguments.length ).toFixed(2);
+    // }
+    // console.log(avgFn(10,20,30,15,45,856,96,85,2))
+
+
+    function avgFn(){
+      console.dir(arguments);
+      arguments.__proto__ = Array.prototype;
+
+        Array.prototype.sort.call(arguments,function(a,b){
+          return a - b;
+        });
+        Array.prototype.pop.call(arguments);
+        Array.prototype.shift.call(arguments);
+        return ( eval(Array.prototype.join.call(arguments,"+"))/arguments.length ).toFixed(2);
+    }
+    console.log(avgFn(10,20,30,15,45,856,96,85,2))
+  </script>
 </body>
 </html>
